Add transaction confirmed and stats endpoints
